<resources>
    <string name="app_name">CoffeeGo</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="signIn">Войти</string>
    <string name="signUp">Регистрация</string>
    <string name="enter_valid_email">Введите корректный email</string>
    <string name="enter_password">Введите пароль</string>
    <string name="password_six_char">Пароль не должен быть меньше 6 символов</string>
    <string name="fullName">Ваше имя</string>
    <string name="toContinue">Продолжить</string>
    <string name="toSignUp">Зарегистрироваться</string>
    <string name="enter_fullname">Введите ваше имя</string>
    <string name="succeed_signed_up">Вы успешно зарегистрировались</string>
    <string name="editProfile">Редактировать профиль</string>
    <string name="balance">Баланс:</string>
    <string name="sign_out_question">Вы хотите выйти из аккаунта?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="contact_us_text">Мы принимаем звонки с 10:00 до 18:00</string>
    <string name="call">Позвонить</string>
    <string name="write">Написать</string>
    <string name="changeEmail">Изменить Email</string>
    <string name="new_email">Новый email</string>
    <string name="current_password">Текущий пароль</string>
    <string name="save">Сохранить</string>
    <string name="current_email_text">Текущий электронный адрес</string>
    <string name="succeed_change">Успешно изменен</string>
    <string name="changePassword">Сменить пароль</string>
    <string name="new_password">Новый пароль</string>
    <string name="repeate_new_password">Повторите пароль</string>
    <string name="passwords_not_match">Пароли не совпадают</string>
    <string name="change_photo">Сменить фото</string>
    <string name="city">Город</string>
    <string name="name">Имя</string>
    <string name="details">Подробнее</string>
    <string name="address">Адрес</string>
    <string name="working_schedule">Время работы</string>
    <string name="description">Описание</string>
    <string name="contacts">Контакты</string>
    <string name="navigate_camera_to_qrcode">Наведите камеру на QR-код</string>
    <string name="pay">Оплатить</string>
    <string name="error_qr_code">Неправильный QR-код, отсканируйе заново</string>
    <string name="enter_product_price">Напишите стоимость</string>
    <string name="succeed_paid">Успешно оплачено</string>
    <string name="you_paid">Вы оплатили</string>
    <string name="good">Хорошо</string>
    <string name="success">Успешно!</string>

    <string-array name="cities_kz">
        <item>Нур-Султан</item>
        <item>Алматы</item>
        <item>Шымкент</item>
        <item>Караганда</item>
        <item>Актобе</item>
        <item>Тараз</item>
        <item>Павлодар</item>
        <item>Усть-Каменогорск</item>
        <item>Семей</item>
        <item>Кызылорда</item>
        <item>Костанай</item>
        <item>Атырау</item>
        <item>Петропавлск</item>
        <item>Актау</item>
        <item>Кокшетау</item>
        <item>Талдыкорган</item>
        <item>Жезказган</item>
    </string-array>

    <string-array name="settings">
        <item>Сменить пароль</item>
        <item>Изменить Email</item>
        <item>Соглашение</item>
        <item>Поделиться приложением</item>
        <item>Связаться с нами</item>
    </string-array>
</resources>
