<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".presentation.signUpEmail.SignUpEmailFragment">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:background="@color/colorPrimary">

            <ImageButton
                android:id="@+id/btnSignUpBack"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_arrow_back_white"
                android:layout_alignParentStart="true"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:text="@string/signUp"
                android:gravity="center"/>

        </RelativeLayout>

        <EditText
            android:id="@+id/edtSignUpEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="22dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/edtSignUpName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="22dp"
            android:hint="@string/fullName"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/edtSignUpPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="22dp"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="22dp"
            android:text="@string/toSignUp"
            android:textColor="@color/white"
            android:background="@drawable/rounded_corner_button_background"
            android:textAllCaps="false" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:visibility="gone"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>
</layout>