<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".presentation.login.LoginFragment">

        <EditText
            android:id="@+id/edtLoginEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginTop="180dp"
            android:layout_marginEnd="22dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/edtLoginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="22dp"
            android:hint="@string/password"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/btnLoginSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="22dp"
            android:text="@string/signIn"
            android:textColor="@color/white"
            android:background="@drawable/rounded_corner_button_background"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btnLoginSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="22dp"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="22dp"
            android:text="@string/signUp"
            android:textColor="@color/colorPrimary"
            android:background="@drawable/round_bordered_button_background"
            android:textAllCaps="false" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="22dp"
            android:visibility="gone"/>

    </LinearLayout>
</layout>