<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:context=".presentation.editProfile.EditProfileFragment">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:background="@color/colorPrimary">

            <ImageButton
                android:id="@+id/btnEditProfileBack"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:background="@android:color/transparent"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:src="@drawable/ic_arrow_back_white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/editProfile"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

        </RelativeLayout>

        <ImageView
            android:id="@+id/ivEditProfileAvatar"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/all_circle_white_background"
            tools:src="@drawable/ic_account_circle_gray" />

        <TextView
            android:id="@+id/tvEditProfileChangeAvatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/change_photo"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/name"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edtEditProfileName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_fullname"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/city"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/spEditProfuleCities"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <Button
            android:id="@+id/btnEditProfileSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/rounded_corner_button_background"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:text="@string/save"
            android:textColor="@color/white" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:visibility="gone" />


    </LinearLayout>
</layout>