<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.cafeteria.CafeteriaFragment">

        <RelativeLayout
            android:id="@+id/cafeteriaActionBarLayout"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:background="@color/colorPrimary">

            <ImageButton
                android:id="@+id/btnCafeteriaBack"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_arrow_back_white"
                android:layout_alignParentStart="true"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:text="@string/details"
                android:gravity="center"/>

        </RelativeLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/svCafeteriaScroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:overScrollMode="never"
            android:layout_below="@+id/cafeteriaActionBarLayout">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/ivCafeteriaImage"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">
                    <ImageView
                        android:id="@+id/ivCafeteriaLogo"
                        android:layout_width="34dp"
                        android:layout_height="34dp"
                        tools:src="@drawable/ic_account_circle_gray"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginEnd="12dp" />

                    <TextView
                        android:id="@+id/tvCafeteriaName"
                        android:layout_width="wrap_content"
                        android:layout_height="34dp"
                        android:layout_marginTop="12dp"
                        android:gravity="center_vertical"
                        tools:text="BurritoGo"
                        android:textColor="#2D140D"
                        android:textSize="14sp" />
                </LinearLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black_opacity50"
                    android:textAllCaps="true"
                    android:text="@string/address"
                    android:layout_marginTop="24dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    />

                <TextView
                    android:id="@+id/tvCafeteriaAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    tools:text="Abya ave 45, 5th floor"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/bright_gray"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black_opacity50"
                    android:textAllCaps="true"
                    android:text="@string/description"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvCafeteriaProducts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:overScrollMode="never"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    android:layout_marginTop="16dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black_opacity50"
                    android:textAllCaps="true"
                    android:text="@string/working_schedule"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    />

                <TextView
                    android:id="@+id/tvCafeteriaWorkingTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    tools:text="from 10:00 to 18:00"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/bright_gray"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black_opacity50"
                    android:textAllCaps="true"
                    android:text="@string/contacts"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvCafeteriaPhoneNumbers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:overScrollMode="never"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    android:layout_marginTop="16dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            />

    </RelativeLayout>
</layout>